Alignment fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -514,6 +514,10 @@ div.WrapperPadding20 {
   padding: 20px;
 }
 
+div.WrapperPadding20-8 {
+  padding: 20px 8px;
+}
+
 div.WrapperPadding20-10 {
   padding: 20px 10px;
 }
@@ -851,6 +855,7 @@ mat-form-field {
   div.WrapperPadding10-8-10-10,
   div.WrapperPadding10-10-0-8,
   div.WrapperPadding20,
+  div.WrapperPadding20-8,
   div.WrapperPadding20-10,
   div.WrapperPadding20-20-0-20,
   div.WrapperPadding20-20-0-8,
